--- a/Jominder/Views/Home/Index.cshtml
+++ b/Jominder/Views/Home/Index.cshtml
@@ -2,13 +2,17 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron text-center">
-    <h1>JAMINDER.COM</h1>
-    <p class="lead">An app where developers and landowners find their path</p>
-    <div>
-        <a class="btn btn-primary btn-large" href="/Developer">Continue as Developer</a> &nbsp;&nbsp;&nbsp; <a class="btn btn-primary btn-large" href="/LandOwner">Continue as Land Owner</a>
+<div class="container">
+    <div class="jumbotron text-center">
+        <h1>JAMINDER.COM</h1>
+        <p class="lead">An app where developers and landowners find their path</p>
+        <div>
+            <a class="btn btn-primary btn-large" href="/Developer">Continue as Developer</a> &nbsp;&nbsp;&nbsp;
+            <a class="btn btn-primary btn-large" href="/LandOwner">Continue as Land Owner</a>
+        </div>
+
+        @*<p><a href="http://jominder.com" class="btn btn-primary btn-large">Learn more &raquo;</a></p>*@
     </div>
-    @*<p><a href="http://jominder.com" class="btn btn-primary btn-large">Learn more &raquo;</a></p>*@
 </div>
 
 @*<div class="row">
