--- a/Jominder/Content/Site.css
+++ b/Jominder/Content/Site.css
@@ -3,7 +3,7 @@
     /*padding-top: 50px;*/
     padding-bottom: 20px;
     color: #fff;
-    
+    font: 14px/20px 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 /* Set padding to keep content from hitting the edges */
