--- a/Jominder/Views/Home/About.cshtml
+++ b/Jominder/Views/Home/About.cshtml
@@ -1,7 +1,17 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
-
-<p>Use this area to provide additional information.</p>
+<div class="container">
+    <div class="jumbotron">
+        <div style="text-align:center">
+            <p style="margin-top: 20px;margin-left: 250px;margin-right: 250px;">
+                Jomindar.com is platform where a Developer can easyly find a desired land or locaton and respectively a Land owner also can choose and negotiate
+                with diffrent Builders and their offers and can easyly pick one of the switabe offer for them.
+            </p>
+            <p>for further queries ask us:</p>
+            <p><a href="#"><span class="glyphicon glyphicon-envelope"></span> reeshad@jomindarbd.com</a></p>
+            <p><a href="#"><span class="glyphicon glyphicon-envelope"></span> shuvho@jomindarbd.com</a></p>
+            &nbsp;
+        </div>
+    </div>
+</div>
