testing Time solve

--- a/Jominder/Views/Home/Packages.cshtml
+++ b/Jominder/Views/Home/Packages.cshtml
@@ -2,148 +2,150 @@
     ViewBag.Title = "Packages";
 }
 
-<header class="cd-header" style="height: 0px;">
-    <h1 style="height: 0px;">Pricing Tables</h1>
-</header>
-<div class="cd-pricing-container cd-has-margins" style="
+<div style="margin-top:-60px">
+    <header class="cd-header" style="height: 0px;">
+        <h1 style="height: 0px;">Pricing Tables</h1>
+    </header>
+    <div class="cd-pricing-container cd-has-margins" style="
     margin-top: 170px;
 ">
-    <div class="cd-pricing-switcher">
-        <p class="fieldset">
-            <input type="radio" name="duration-2" value="monthly" id="monthly-2" checked="">
-            <label for="monthly-2">Monthly</label>
-            <input type="radio" name="duration-2" value="yearly" id="yearly-2">
-            <label for="yearly-2">Yearly</label>
-            <span class="cd-switch"></span>
-        </p>
-    </div> 
-    <ul class="cd-pricing-list cd-bounce-invert">
-        <li>
-            <ul class="cd-pricing-wrapper">
-                <li data-type="monthly" class="is-ended is-hidden">
-                    <header class="cd-pricing-header">
-                        <h2>Basic</h2>
-                        <div class="cd-price">
-                            <span class="cd-currency">$</span>
-                            <span class="cd-value">1</span>
-                            <span class="cd-duration">mo</span>
+        <div class="cd-pricing-switcher">
+            <p class="fieldset">
+                <input type="radio" name="duration-2" value="monthly" id="monthly-2" checked="">
+                <label for="monthly-2">Monthly</label>
+                <input type="radio" name="duration-2" value="yearly" id="yearly-2">
+                <label for="yearly-2">Yearly</label>
+                <span class="cd-switch"></span>
+            </p>
+        </div>
+        <ul class="cd-pricing-list cd-bounce-invert">
+            <li>
+                <ul class="cd-pricing-wrapper">
+                    <li data-type="monthly" class="is-ended is-hidden">
+                        <header class="cd-pricing-header">
+                            <h2>Basic</h2>
+                            <div class="cd-price">
+                                <span class="cd-currency">BDT</span>
+                                <span class="cd-value">1,000</span>
+                                <span class="cd-duration">mo</span>
+                            </div>
+                        </header>
+                        <div class="cd-pricing-body">
+                            <ul class="cd-pricing-features">
+                                <li><em>10</em> Information</li>
+                                <li><em>Any 2</em> Location</li>
+                            </ul>
                         </div>
-                    </header> 
-                    <div class="cd-pricing-body">
-                        <ul class="cd-pricing-features">
-                            <li><em>10</em> Information</li>
-                            <li><em>Any 2</em> Location</li>
-                        </ul>
-                    </div> 
-                    <footer class="cd-pricing-footer">
-                        <a class="cd-select" href="/LandOwner/Index">Select</a>
-                    </footer> 
-                </li>
-                <li data-type="yearly" class="is-ended is-visible">
-                    <header class="cd-pricing-header">
-                        <h2>Basic</h2>
-                        <div class="cd-price">
-                            <span class="cd-currency">$</span>
-                            <span class="cd-value">11</span>
-                            <span class="cd-duration">yr</span>
+                        <footer class="cd-pricing-footer">
+                            <a class="cd-select" href="/LandOwner/Index">Select</a>
+                        </footer>
+                    </li>
+                    <li data-type="yearly" class="is-ended is-visible">
+                        <header class="cd-pricing-header">
+                            <h2>Basic</h2>
+                            <div class="cd-price">
+                                <span class="cd-currency">BDT</span>
+                                <span class="cd-value">11,000</span>
+                                <span class="cd-duration">yr</span>
+                            </div>
+                        </header>
+                        <div class="cd-pricing-body">
+                            <ul class="cd-pricing-features">
+                                <li><em>11</em> Information</li>
+                                <li><em>Any 2</em> Location</li>
+                            </ul>
                         </div>
-                    </header> 
-                    <div class="cd-pricing-body">
-                        <ul class="cd-pricing-features">
-                            <li><em>11</em> Information</li>
-                            <li><em>Any 2</em> Location</li>
-                        </ul>
-                    </div> 
-                    <footer class="cd-pricing-footer">
-                        <a class="cd-select" href="/LandOwner/Index">Select</a>
-                    </footer> 
-                </li>
-            </ul>
-        </li>
-        <li class="cd-popular">
-            <ul class="cd-pricing-wrapper">
-                <li data-type="monthly" class="is-ended is-hidden">
-                    <header class="cd-pricing-header">
-                        <h2>Popular</h2>
-                        <div class="cd-price">
-                            <span class="cd-currency">$</span>
-                            <span class="cd-value">2</span>
-                            <span class="cd-duration">mo</span>
+                        <footer class="cd-pricing-footer">
+                            <a class="cd-select" href="/LandOwner/Index">Select</a>
+                        </footer>
+                    </li>
+                </ul>
+            </li>
+            <li class="cd-popular">
+                <ul class="cd-pricing-wrapper">
+                    <li data-type="monthly" class="is-ended is-hidden">
+                        <header class="cd-pricing-header">
+                            <h2>Popular</h2>
+                            <div class="cd-price">
+                                <span class="cd-currency">BDT</span>
+                                <span class="cd-value">2,000</span>
+                                <span class="cd-duration">mo</span>
+                            </div>
+                        </header>
+                        <div class="cd-pricing-body">
+                            <ul class="cd-pricing-features">
+                                <li><em>15</em> Information</li>
+                                <li><em>Any 5</em> Location</li>
+                            </ul>
                         </div>
-                    </header>
-                    <div class="cd-pricing-body">
-                        <ul class="cd-pricing-features">
-                            <li><em>15</em> Information</li>
-                            <li><em>Any 5</em> Location</li>
-                        </ul>
-                    </div> 
-                    <footer class="cd-pricing-footer">
-                        <a class="cd-select" href="/LandOwner/Index">Select</a>
-                    </footer>  
-                </li>
-                <li data-type="yearly" class="is-ended is-visible">
-                    <header class="cd-pricing-header">
-                        <h2>Popular</h2>
-                        <div class="cd-price">
-                            <span class="cd-currency">$</span>
-                            <span class="cd-value">29</span>
-                            <span class="cd-duration">yr</span>
+                        <footer class="cd-pricing-footer">
+                            <a class="cd-select" href="/LandOwner/Index">Select</a>
+                        </footer>
+                    </li>
+                    <li data-type="yearly" class="is-ended is-visible">
+                        <header class="cd-pricing-header">
+                            <h2>Popular</h2>
+                            <div class="cd-price">
+                                <span class="cd-currency">BDT</span>
+                                <span class="cd-value">23,000</span>
+                                <span class="cd-duration">yr</span>
+                            </div>
+                        </header>
+                        <div class="cd-pricing-body">
+                            <ul class="cd-pricing-features">
+                                <li><em>16</em> Information</li>
+                                <li><em>Any 5</em> Location</li>
+                            </ul>
                         </div>
-                    </header> 
-                    <div class="cd-pricing-body">
-                        <ul class="cd-pricing-features">
-                            <li><em>16</em> Information</li>
-                            <li><em>Any 5</em> Location</li>
-                        </ul>
-                    </div> 
-                    <footer class="cd-pricing-footer">
-                        <a class="cd-select" href="/LandOwner/Index">Select</a>
-                    </footer> 
-                </li>
-            </ul> 
-        </li>
-        <li>
-            <ul class="cd-pricing-wrapper">
-                <li data-type="monthly" class="is-ended is-hidden">
-                    <header class="cd-pricing-header">
-                        <h2>Premier</h2>
-                        <div class="cd-price">
-                            <span class="cd-currency">$</span>
-                            <span class="cd-value">3</span>
-                            <span class="cd-duration">mo</span>
+                        <footer class="cd-pricing-footer">
+                            <a class="cd-select" href="/LandOwner/Index">Select</a>
+                        </footer>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <ul class="cd-pricing-wrapper">
+                    <li data-type="monthly" class="is-ended is-hidden">
+                        <header class="cd-pricing-header">
+                            <h2>Premier</h2>
+                            <div class="cd-price">
+                                <span class="cd-currency">BDT</span>
+                                <span class="cd-value">3,000</span>
+                                <span class="cd-duration">mo</span>
+                            </div>
+                        </header>
+                        <div class="cd-pricing-body">
+                            <ul class="cd-pricing-features">
+                                <li><em>20</em> Information</li>
+                                <li><em>All possible</em> Location</li>
+                            </ul>
                         </div>
-                    </header>
-                    <div class="cd-pricing-body">
-                        <ul class="cd-pricing-features">
-                            <li><em>20</em> Information</li>
-                            <li><em>All possible</em> Location</li>
-                        </ul>
-                    </div> 
-                    <footer class="cd-pricing-footer">
-                        <a class="cd-select" href="/LandOwner/Index">Select</a>
-                    </footer>  
-                </li>
-                <li data-type="yearly" class="is-ended is-visible">
-                    <header class="cd-pricing-header">
-                        <h2>Premier</h2>
-                        <div class="cd-price">
-                            <span class="cd-currency">$</span>
-                            <span class="cd-value">35</span>
-                            <span class="cd-duration">yr</span>
+                        <footer class="cd-pricing-footer">
+                            <a class="cd-select" href="/LandOwner/Index">Select</a>
+                        </footer>
+                    </li>
+                    <li data-type="yearly" class="is-ended is-visible">
+                        <header class="cd-pricing-header">
+                            <h2>Premier</h2>
+                            <div class="cd-price">
+                                <span class="cd-currency">BDT</span>
+                                <span class="cd-value">35,000</span>
+                                <span class="cd-duration">yr</span>
+                            </div>
+                        </header>
+                        <div class="cd-pricing-body">
+                            <ul class="cd-pricing-features">
+                                <li><em>22</em> Information</li>
+                                <li><em>All possible</em> Location</li>
+                            </ul>
                         </div>
-                    </header> 
-                    <div class="cd-pricing-body">
-                        <ul class="cd-pricing-features">
-                            <li><em>22</em> Information</li>
-                            <li><em>All possible</em> Location</li>
-                        </ul>
-                    </div> 
-                    <footer class="cd-pricing-footer">
-                        <a class="cd-select" href="/LandOwner/Index">Select</a>
-                    </footer> 
-                </li>
-            </ul> 
-        </li>
-    </ul> 
+                        <footer class="cd-pricing-footer">
+                            <a class="cd-select" href="/LandOwner/Index">Select</a>
+                        </footer>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+    </div>
 </div>
 
