--- a/Jominder/Views/Shared/_Layout.cshtml
+++ b/Jominder/Views/Shared/_Layout.cshtml
@@ -47,9 +47,9 @@
             <div class="mdl-layout__drawer">
                 <span class="mdl-layout-title" style="margin-left:30px">Jomindar</span>
                 <nav class="mdl-navigation">
-                    <p style="margin-left:70px"><a href="/Home"><span class="glyphicon glyphicon-home"></span> About us</a></p>
+                    <p style="margin-left:70px"><a href="/Home/About"><span class="glyphicon glyphicon-home"></span> About us</a></p>
                     &nbsp;&nbsp;
-                    <p style="margin-left:70px"><a href="#"><span class="glyphicon glyphicon-bullhorn"></span> Contacts us</a></p>
+                    <p style="margin-left:62px"><a href="#"><span class="glyphicon glyphicon-phone-alt"></span> Contacts us</a></p>
                     &nbsp;&nbsp;
                     <a style="margin-left:50px" target="_blank" title="find us on Facebook" href="http://www.facebook.com/">
                     <img alt="follow me on facebook" src="//login.create.net/images/icons/user/facebook_30x30.png" border=0></a>
