--- a/Jominder/Views/Home/DeveloperHome.cshtml
+++ b/Jominder/Views/Home/DeveloperHome.cshtml
@@ -4,6 +4,11 @@
 <div class="container">
     
     <div class="jumbotron text-center">
+        
+        <div>
+            <p><a href="/Developer/Create"><span class="glyphicon glyphicon-pencil"></span> Post Your Offer</a></p>
+            &nbsp;
+        </div>
         <p class="lead">Choose your desired location</p>
 
         <div class="container">
@@ -150,6 +155,6 @@
             </section>
         </div>
 
-        @*<p><a href="http://jominder.com" class="btn btn-primary btn-large">Learn more &raquo;</a></p>*@
+        
     </div>
 </div>
