--- a/Jominder/Views/Account/Manage.cshtml
+++ b/Jominder/Views/Account/Manage.cshtml
@@ -1,27 +1,22 @@
 ﻿@using Jominder.Models;
 @using Microsoft.AspNet.Identity;
-@{
-    ViewBag.Title = "Manage Account";
-}
 
-<h2>@ViewBag.Title.</h2>
+<div class="container">
+    <h2>@ViewBag.Title.</h2>
 
-<p class="text-success">@ViewBag.StatusMessage</p>
-<div class="row">
-    <div class="col-md-12">
-        @if (ViewBag.HasLocalPassword)
-        {
-            @Html.Partial("_ChangePasswordPartial")
-        }
-        else
-        {
-            @Html.Partial("_SetPasswordPartial")
-        }
+    <p class="text-success">@ViewBag.StatusMessage</p>
+    <div class="row">
+        <div class="col-md-12">
+            @if (ViewBag.HasLocalPassword)
+            {
+                @Html.Partial("_ChangePasswordPartial")
+            }
+            else
+            {
+                @Html.Partial("_SetPasswordPartial")
+            }
 
-        <section id="externalLogins">
-            @Html.Action("RemoveAccountList")
-            @Html.Partial("_ExternalLoginsListPartial", new { Action = "LinkLogin", ReturnUrl = ViewBag.ReturnUrl })
-        </section>
+        </div>
     </div>
 </div>
 @section Scripts {
